--- a/circle.yml
+++ b/circle.yml
@@ -18,3 +18,6 @@ dependencies:
 test:
   override:
     - mix test
+  post:
+    - mkdir -p ${CIRCLE_TEST_REPORTS}/Elixir
+    - mv _build/test/test-junit-report.xml ${CIRCLE_TEST_REPORTS}/Elixir/
