--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,8 @@ dependencies:
     - mix deps.get
 test:
   override:
-    - mix test
+    - mix test --cover
   post:
+    - cp -a cover ${CIRCLE_ARTIFACTS}/
     - mkdir -p ${CIRCLE_TEST_REPORTS}/Elixir
     - mv _build/test/test-junit-report.xml ${CIRCLE_TEST_REPORTS}/Elixir/
